add bytebuddy transformer